<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblrequestID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRequestID"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSource"
            android:textStyle="normal|bold"
            android:textAlignment="textStart"
            android:paddingRight="10dp" />


        <TextView
            android:id="@+id/txtSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSource" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/lblDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDestination"
            android:paddingRight="5dp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/txtDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtDestination" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/lblRequestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRequestTime"
            android:textStyle="normal|bold"
            android:paddingRight="5dp" />

        <TextView
            android:id="@+id/txtRequestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRequestTime" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/lblBidAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBidValue"
            android:paddingRight="5dp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/txtBidValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txtBidValue"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/btnIgnore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ignoreBid"
            android:paddingRight="5dp" />

        <Button
            android:id="@+id/btnPlaceBid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:text="@string/placeBid" />
    </LinearLayout>

</LinearLayout>
